--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,8 @@
   "proxy": "http://localhost:5000",
   "private": true,
   "dependencies": {
+    "@googlemaps/react-wrapper": "^1.1.35",
+    "@react-google-maps/api": "^2.13.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
